[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/panel_small.png" type="Texture" id=1]
[ext_resource path="res://assets/easy_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/easy.png" type="Texture" id=3]
[ext_resource path="res://assets/easy_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/x_btn.png" type="Texture" id=5]
[ext_resource path="res://Dialog.gd" type="Script" id=6]

[sub_resource type="Animation" id=2]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Show"
playback_speed = 2.0
anims/Hide = SubResource( 2 )
anims/Show = SubResource( 1 )

[node name="Show" type="Button" parent="."]
margin_left = 461.851
margin_top = 379.588
margin_right = 550.851
margin_bottom = 399.588
text = "Show Dialog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 323.681
margin_top = 188.814
margin_right = 682.681
margin_bottom = 367.814
rect_pivot_offset = Vector2( 181.585, 88.2271 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_top = 4.0
margin_right = 359.0
margin_bottom = 183.0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureButton" parent="Control"]
margin_left = 230.137
margin_top = 129.933
margin_right = 440.137
margin_bottom = 198.933
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="TextureButton" parent="Control"]
margin_left = 117.501
margin_top = 129.334
margin_right = 327.501
margin_bottom = 198.334
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
margin_left = 121.0
margin_top = 139.0
margin_right = 219.0
margin_bottom = 153.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Previous"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
margin_left = 232.0
margin_top = 139.0
margin_right = 332.0
margin_bottom = 153.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Next"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="Control"]
margin_left = 327.917
margin_top = 1.0
margin_right = 396.917
margin_bottom = 72.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 18.3186
margin_top = 30.1859
margin_right = 336.319
margin_bottom = 125.186
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Demo Text"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Show" to="." method="_on_Show_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Control/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Control/Close" to="." method="_on_Close_pressed"]
